[project]
name = "db-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "asgiref>=3.9.1",
    "asyncmy>=0.2.10",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.1",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
